@@ -30,6 +30,8 @@ func testEntryServer(t *testing.T, requestURL string, httpHeaders http.Header, a
 
 		// The server returns a Content-Disposition
 		w.Header().Set("Content-Disposition", "attachment; filename=\"archive.txt\"")
+		w.Header().Set("Cache-Control", "no-store")
+		w.Header().Set("Expires", "")
 
 		SendURL.Inject(w, r, data)
 	}
@@ -44,6 +46,8 @@ func testEntryServer(t *testing.T, requestURL string, httpHeaders http.Header, a
 		require.NoError(t, err)
 
 		w.Header().Set("Etag", testDataEtag)
+		w.Header().Set("Cache-Control", "public")
+		w.Header().Set("Expires", "Wed, 21 Oct 2015 07:28:00 GMT")
 
 		http.ServeContent(w, r, "archive.txt", time.Now(), tempFile)
 	}
@@ -158,6 +162,18 @@ func TestAccessingAllowedRedirectWithChunkOfDataWithSendURL(t *testing.T) {
 		"bytes 1-2/30")
 
 	testhelper.AssertResponseBody(t, response, "23")
+}
+
+func TestOriginalCacheHeadersPreservedWithSendURL(t *testing.T) {
+	response := testEntryServer(t, "/get/redirect", nil, true)
+	testhelper.AssertResponseCode(t, response, http.StatusOK)
+
+	testhelper.AssertResponseWriterHeader(t, response,
+		"Cache-Control",
+		"no-store")
+	testhelper.AssertResponseWriterHeader(t, response,
+		"Expires",
+		"")
 }
 
 func TestDownloadingNonExistingFileUsingSendURL(t *testing.T) {
