@@ -2,6 +2,10 @@
 
 Formerly known as 'gitlab-git-http-server'.
 
+Next
+
+- Preserve original HTTP cache headers when proxying with sendurl
+
 v8.12.0
 
 - Fix health checks routes incorrectly intercepting errors !424
